Upgrade Neo4J 3.4.9 to 4.2.0, OGM 3.2.8 to 3.2.25 (#34)
* Update versions: Neo4J OGM 3.2.24 and Neo4J 4.2.0
* Remove now unnecessary hack: neo4j-ogm-core:3.2.24 depends on classgraph 4.8.86
* Fix tests by using an earlier version of Neo4jMatchers (3.4.9) and adapting it to latest.
* Migrate to Cypher 4 syntax for params
* Use explicit transaction name in beginTx().use {}
* Migrate CREATE UNIQUE to MERGE
* Introduce TimestampConverter to explicitly save with custom serialization
* Ignore unsafe reflective calls
* Fix logging of Neo4J OGM in tests
* Work around for duplicate ID in XML
* Work around https://github.com/neo4j/neo4j/issues/12770 (SLF4J: Class path contains multiple SLF4J bindings.)
* Bump minor version to fix https://github.com/neo4j/neo4j/issues/12655
* Fix: remove polyfills, https://github.com/neo4j/neo4j-ogm/pull/765 is merged.
* Fix flaky test: separate JFixture objects would keep creating duplicate IDs at random. Sharing the instance will always create unique integers.